[package]
name = "pyl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { version = "0.17.0", default-features = false, features = ["lz4", "multi-threaded-cf"] }
actix-web = "3"
uuid = { version = "0.8", features = ["serde", "v4"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
