[package]
name = "pyl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { version = "0.17.0", default-features = false, features = ["lz4", "multi-threaded-cf"] }
actix-web = "3"
futures = "0.3.1"
actix-service = "1"

uuid = { version = "0.8", features = ["serde", "v4"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-argon2 = "0.8"
dotenv = "0.15.0"
jsonwebtoken = "7"

log = "0.4.14"
log4rs = { version = "1.0.0", features = ["background_rotation"] }
log-panics = "2.0.0"

wasmer = "2.0"
wasmer-compiler-cranelift = "2.0"
wasmer-engine-universal = "2.0"
